# Bionics

./: .gitignore  .mcp.json.example  Bionics.spec  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  _alpha_planet_cmd_verify.py  _alpha_task16_query_rifle_states.py  _alpha_task16_result.json  _alpha_task16b_bpdoctor.py  _alpha_task16b_bpdoctor_result.json  _alpha_task16c_native_probe.py  _run_m3_skeletal_import.py  _run_m5_relocate_save.py  _run_m5_retarget.py  _run_m5_retarget_v2.py  _verify_skel_rig.py  build.py  cli.py  config.yaml.example  launch.pyw  main.py  mcp_server.py  pyproject.toml  requirements.txt  sync_plugin.py  watch.py
bionics_tools/: __init__.py  _ue5_common.py  _ue5_native_exec.py  bionics_core.py  bp_doctor.py  market.py  memory_tools.py  system.py  task_tools.py  ue5_actor.py  ue5_animgraph.py  ue5_animlayer.py  ue5_asset.py  ue5_audio.py  ue5_autorig.py  ue5_blueprint.py  ue5_controlrig.py  ue5_editor.py  ue5_eventgraph.py  ue5_export.py  ue5_native.py  ue5_niagara.py  ue5_retarget.py  ue5_rigging.py  ue5_runtime.py  ue5_uasvc.py  watch_mode.py
core/: abi_guard.py  agent.py  agent_definitions.py  anthropic_client.py  auto_planner.py  bridge.py  capture.py  embeddings.py  executor.py  guardrails.py  mcp_ctx.py  memory.py  mvp_doctor.py  otel_hook.py  paths.py  planner.py  precision.py  quiz_engine.py  resilience.py  safety.py  session.py  state.py  task_manager.py  templates.py  tool_cache.py  ue5_bridge.py  ui_automation.py  undo.py  verification.py  watch_engine.py  watch_registry.py  watch_schemas.py  watch_state.py
docs/demos/: README.md  T1A_bpdoctor_hero_gif.md  T1B_one_prompt_locomotion.md
docs/research/: UE5_CustomBridge_Architecture.md
gui/: app.py  overlay.py  quiz_panel.py  watch_panel.py
gui/styles/: bifrost.qss
market/output/: sworder721_ad_AIDA_v17_20260405_175848.md  sworder721_ad_AIDA_v2_20260405_175738.md  sworder721_ad_BAB_v12_20260405_175826.md  sworder721_ad_PAS_v7_20260405_175801.md  sworder721_email_subject_AIDA_v20_20260405_175855.md  sworder721_email_subject_AIDA_v5_20260405_175745.md  sworder721_email_subject_BAB_v15_20260405_175833.md  sworder721_email_subject_PAS_v10_20260405_175808.md  sworder721_headline_AIDA_v8_20260405_175804.md  sworder721_headline_BAB_v18_20260405_175851.md  sworder721_headline_BAB_v3_20260405_175741.md  sworder721_headline_PAS_v13_20260405_175828.md  sworder721_social_AIDA_v11_20260405_175815.md  sworder721_social_BAB_v6_20260405_175753.md  sworder721_social_PAS_v16_20260405_175840.md  sworder721_social_PAS_v1_20260405_175730.md  sworder721_tagline_AIDA_v14_20260405_175830.md  (+3 more)
market/products/: path.json  (+8 more)
plans/: animbp_archetype_system.json  animbp_wire_master_template.py  animbp_wiring_guide.bionics.json  animbp_wiring_guide.json  animgraph_combat_sequence.json  auto_wire_animgraph.py  bionics_wire_vertical_slice.json  capture_viewport.json  combat_animgraph_plan.json  combat_animgraph_setup.py  demo_bpdoctor_broken_setup.json  demo_full_locomotion.json  fix_bug29_montages.json  full_demo_ready.bionics.json  full_demo_ready.json  hello_world.json  list_all_actors.json  mm_locomotion_setup.py  pytest_exec_plan.json  pytest_load_plan.json  pytest_plan.json  pytest_save_plan.json  run_animbp_doctor.bionics.json  run_animbp_doctor.json  scan_broken_blueprints.json  system_info.json
scripts/: create_eventgraph_test_bp.py  livefire_autorig.py  livefire_divine_powers.py  livefire_retarget.py  livefire_uasvc.py  reset_eventgraph_test_bp.py  smoke_test_bridge_v058.ps1  smoke_test_eventgraph_v0511.ps1  verify_campaign_20260515.py  watch_smoke.py
tests/: test_abi_guard.py  test_agent.py  test_agent_config_wire.py  test_agent_definitions.py  test_auto_planner_abi_gate.py  test_bridge.py  test_core_modules.py  test_divine_powers.py  test_guardrails.py  test_hooks.py  test_integration.py  test_memory_and_cache.py  test_mvp_doctor.py  test_mvp_doctor_movement.py  test_otel_hook.py  test_output_schema.py  test_planner_native_tool_wiring.py  test_session_progress.py  test_system_tools.py  test_task_manager.py  test_tools_market.py  test_ue5_animgraph.py  test_ue5_autorig.py  test_ue5_eventgraph.py  test_ue5_injection.py  test_ue5_native.py  test_ue5_retarget.py  test_ue5_rigging_controlrig.py  test_ue5_uasvc.py  test_ue5_validate_skeleton.py  test_vector_memory.py  test_voyager_verification.py
ue5_modules/: README.txt  __init__.py  remote_execution.py
(+62 files in other folders)
